        '--dump-sorted-F', '--dump-atoms-and-neighbors',
        '--dump-test-Fhkl' options.
  * Removed:
    - COD::CIF::Tags::COD:
     - removing the _cod_superseeded_by, _cod_published_source and
       _cod_est_spacegroup_name_H-M tags since the associated data items
       were never used nor properly defined in the dictionary.

  * Fixed:
    - cif_fix_values:
      - looped temperature, density and refinement weighting scheme values
        no longer produce a malformed CIF file.


cod-tools (2.3)

  * Added:
    - cif2xyz:
      - command line option --add-xyz-header to produce XYZ format as
        defined in http://openbabel.org/wiki/XYZ_%28format%29.
    - cif_cod_check:
      - the --check-pd-block-relations and its inverse options that control
        the execution of checks related to powder diffraction blocks.
    - cif_filter:
      - the --exclude-placeholder-tags, --placeholder-tag-list options
        and a related subroutine that enables the removal of data items
        with placeholder values.
      - the --exclude-redundant-chemical-names option and a related
        subroutine that enables the removal of data items related to
        chemical names that contain redundant values.
    - cif_fix_values:
      - removing URL and doi: prefixes from the values of CIF data items
        that are supposed to hold DOIs.
    - cif_validate:
      - reporting non-looped CIF data items occurring in CIF loops.
      - reporting existence of both replaced and replacing data items
        in the same CIF data block.
    - COD::CIF::Data:
      - the get_formula_units_z() subroutine.
    - COD::DateTime:
      - the 'canonicalise_timestamp()' subroutine.
    - COD::Spacegroups::Lookup::COD:
      - the 'F d 1 1' space group description;
      - the 'F 1 d 1' space group description;
      - the 'F 1 1 d' space group description;
      - the 'C 1 c 1 (a-3/8,b-3/8,a+2*c)' space group description;
      - the 'F 1 2/d 1'  space group description.