@@ -20,12 +20,13 @@ cod-tools (unreleased)
      - removing the _cod_superseeded_by, _cod_published_source and
        _cod_est_spacegroup_name_H-M tags since the associated data items
        were never used nor properly defined in the dictionary.
-
   * Fixed:
     - cif_fix_values:
       - looped temperature, density and refinement weighting scheme values
         no longer produce a malformed CIF file.
-
+    - COD::DateTime:
+      - switched from '\d' to '[0-9]' in regular expressions to match
+        digits in dates.
 
 cod-tools (2.3)
 
